# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1405 2014/09/30 19:33:17 mpagano Exp $

*gentoo-sources-3.12.29 (30 Sep 2014)

  30 Sep 2014; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.12.29.ebuild:
  Linux patch 3.12.29

*gentoo-sources-3.4.104 (26 Sep 2014)

  26 Sep 2014; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.4.104.ebuild:
  Linux patch 3.4.104

*gentoo-sources-3.12.28 (21 Sep 2014)

  21 Sep 2014; Anthony G. Basile <blueness@gentoo.org>
  +gentoo-sources-3.12.28.ebuild:
  Linux patch 3.12.28

*gentoo-sources-3.16.3 (18 Sep 2014)
*gentoo-sources-3.14.19 (18 Sep 2014)
*gentoo-sources-3.10.55 (18 Sep 2014)

  18 Sep 2014; Anthony G. Basile <blueness@gentoo.org>
  +gentoo-sources-3.10.55.ebuild, +gentoo-sources-3.14.19.ebuild,
  +gentoo-sources-3.16.3.ebuild:
  Linux patches 3.10.55 3.14.19 3.16.3

*gentoo-sources-3.14.18 (09 Sep 2014)

  09 Sep 2014; Vlastimil Babka <caster@gentoo.org>
  +gentoo-sources-3.14.18.ebuild:
  Linux patch 3.14.18

*gentoo-sources-3.16.2 (09 Sep 2014)

  09 Sep 2014; Vlastimil Babka <caster@gentoo.org>
  +gentoo-sources-3.16.2.ebuild:
  Linux patch 3.16.2

  15 Aug 2014; Mike Pagano <mpagano@gentoo.org> -gentoo-sources-3.2.60.ebuild:
  Remove 3.2 series.

  14 Aug 2014; Michael Pagano <mpagano@gentoo.org>
  -gentoo-sources-3.4.95.ebuild, -gentoo-sources-3.4.99.ebuild,
  -gentoo-sources-3.4.100.ebuild, -gentoo-sources-3.4.101.ebuild,
  -gentoo-sources-3.4.102.ebuild, -gentoo-sources-3.10.32.ebuild,
  -gentoo-sources-3.10.49.ebuild, -gentoo-sources-3.10.50.ebuild,
  -gentoo-sources-3.10.51.ebuild, -gentoo-sources-3.10.52.ebuild,
  -gentoo-sources-3.12.13.ebuild, -gentoo-sources-3.12.25.ebuild,
  -gentoo-sources-3.14.13.ebuild, -gentoo-sources-3.14.15.ebuild,
  -gentoo-sources-3.15.6.ebuild, -gentoo-sources-3.15.7.ebuild,